--- a/doc/agile/v1/sprint_backlog_20.org
+++ b/doc/agile/v1/sprint_backlog_20.org
@@ -12,22 +12,22 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-11-25 Mon 23:46]
+#+CAPTION: Clock summary at [2019-11-28 Thu 00:13]
 | <75>                                               |         |       |       |       |
 | Headline                                           | Time    |       |       |     % |
 |----------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                       | *24:41* |       |       | 100.0 |
+| *Total time*                                       | *26:44* |       |       | 100.0 |
 |----------------------------------------------------+---------+-------+-------+-------|
-| Stories                                            | 24:41   |       |       | 100.0 |
-| Active                                             |         | 24:41 |       | 100.0 |
-| Edit release notes for previous sprint             |         |       | 11:24 |  46.2 |
-| Create a demo and presentation for previous sprint |         |       |  2:31 |  10.2 |
-| Sprint and product backlog grooming                |         |       |  2:01 |   8.2 |
-| Fix OSX build errors                               |         |       |  0:25 |   1.7 |
-| Nightly code coverage is not being reported        |         |       |  0:23 |   1.6 |
-| Add relational tracing support                     |         |       |  6:39 |  26.9 |
-| Add type overrides to primitives                   |         |       |  0:21 |   1.4 |
-| Fix broken build due to incorrect postgres library |         |       |  0:57 |   3.8 |
+| Stories                                            | 26:44   |       |       | 100.0 |
+| Active                                             |         | 26:44 |       | 100.0 |
+| Edit release notes for previous sprint             |         |       | 11:24 |  42.6 |
+| Create a demo and presentation for previous sprint |         |       |  2:31 |   9.4 |
+| Sprint and product backlog grooming                |         |       |  2:01 |   7.5 |
+| Fix OSX build errors                               |         |       |  0:25 |   1.6 |
+| Add relational tracing support                     |         |       |  6:57 |  26.0 |
+| Add type overrides to primitives                   |         |       |  1:54 |   7.1 |
+| Fix broken build due to incorrect postgres library |         |       |  1:09 |   4.3 |
+| Nightly code coverage is not being reported        |         |       |  0:23 |   1.4 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -322,6 +322,7 @@ Links:
 
 *** STARTED Add relational tracing support                            :story:
     :LOGBOOK:
+    CLOCK: [2019-11-27 Wed 23:01]--[2019-11-27 Wed 23:19] =>  0:18
     CLOCK: [2019-11-25 Mon 08:03]--[2019-11-25 Mon 08:21] =>  0:18
     CLOCK: [2019-11-24 Sun 21:01]--[2019-11-24 Sun 22:32] =>  1:31
     CLOCK: [2019-11-24 Sun 16:35]--[2019-11-24 Sun 19:30] =>  2:55
@@ -420,6 +421,12 @@ Notes:
   new database schema. We should only do it when the user requests
   it. For extra bonus points, we should look for the exception of
   "table does not exist" and recommend the user to create the schema.
+- create a log backend that writes to database. Create a really simple
+  heuristic to extract JSON: look for a ={= or =[= on the first N
+  characters. Look for a matching bracket as the end character. If
+  found, extract the content into a JSON field. We can use the [[https://www.boost.org/doc/libs/1_71_0/boost/log/sinks/text_ipc_message_queue_backend.hpp][IPC
+  backend]] as a starting point.
+- move relational tracer and relational logger into relational model.
 
 Merged stories:
 
@@ -487,6 +494,7 @@ runs. The schema should be designed with this in mind.
 
 *** STARTED Add type overrides to primitives                          :story:
     :LOGBOOK:
+    CLOCK: [2019-11-27 Wed 23:24]--[2019-11-28 Thu 00:13] =>  0:49
     CLOCK: [2019-11-26 Tue 08:01]--[2019-11-26 Tue 08:45] =>  0:44
     CLOCK: [2019-11-25 Mon 08:22]--[2019-11-25 Mon 08:43] =>  0:21
     :END:
@@ -532,6 +540,7 @@ Notes:
 
 *** STARTED Fix broken build due to incorrect postgres library        :story:
     :LOGBOOK:
+    CLOCK: [2019-11-27 Wed 23:19]--[2019-11-27 Wed 23:24] =>  0:05
     CLOCK: [2019-11-25 Mon 23:47]--[2019-11-25 Mon 23:54] =>  0:07
     CLOCK: [2019-11-25 Mon 23:41]--[2019-11-25 Mon 23:46] =>  0:05
     CLOCK: [2019-11-25 Mon 22:48]--[2019-11-25 Mon 23:40] =>  0:52
