--- a/doc/agile/v1/sprint_backlog_20.org
+++ b/doc/agile/v1/sprint_backlog_20.org
@@ -12,22 +12,22 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-11-29 Fri 11:00]
+#+CAPTION: Clock summary at [2019-11-29 Fri 11:11]
 | <75>                                               |         |       |       |       |
 | Headline                                           | Time    |       |       |     % |
 |----------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                       | *28:17* |       |       | 100.0 |
+| *Total time*                                       | *28:26* |       |       | 100.0 |
 |----------------------------------------------------+---------+-------+-------+-------|
-| Stories                                            | 28:17   |       |       | 100.0 |
-| Active                                             |         | 28:17 |       | 100.0 |
-| Edit release notes for previous sprint             |         |       | 11:24 |  40.3 |
+| Stories                                            | 28:26   |       |       | 100.0 |
+| Active                                             |         | 28:26 |       | 100.0 |
+| Edit release notes for previous sprint             |         |       | 11:24 |  40.1 |
 | Create a demo and presentation for previous sprint |         |       |  2:31 |   8.9 |
-| Sprint and product backlog grooming                |         |       |  2:12 |   7.8 |
+| Sprint and product backlog grooming                |         |       |  2:21 |   8.3 |
 | Fix OSX build errors                               |         |       |  0:25 |   1.5 |
 | Fix broken build due to incorrect postgres library |         |       |  2:31 |   8.9 |
-| Add relational tracing support                     |         |       |  6:57 |  24.6 |
+| Add relational tracing support                     |         |       |  6:57 |  24.4 |
 | Add type overrides to primitives                   |         |       |  1:54 |   6.7 |
-| Nightly code coverage is not being reported        |         |       |  0:23 |   1.4 |
+| Nightly code coverage is not being reported        |         |       |  0:23 |   1.3 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -276,6 +276,7 @@ Notes:
 
 *** STARTED Sprint and product backlog grooming                       :story:
     :LOGBOOK:
+    CLOCK: [2019-11-29 Fri 11:02]--[2019-11-29 Fri 11:11] =>  0:09
     CLOCK: [2019-11-29 Fri 10:12]--[2019-11-29 Fri 10:23] =>  0:11
     CLOCK: [2019-11-25 Mon 18:22]--[2019-11-25 Mon 18:27] =>  0:05
     CLOCK: [2019-11-25 Mon 17:41]--[2019-11-25 Mon 18:21] =>  0:40
