--- a/doc/agile/v1/sprint_backlog_20.org
+++ b/doc/agile/v1/sprint_backlog_20.org
@@ -554,6 +554,7 @@ runs. The schema should be designed with this in mind.
 
 *** STARTED Add type overrides to primitives                          :story:
     :LOGBOOK:
+    CLOCK: [2019-11-29 Fri 11:26]--[2019-11-29 Fri 11:48] =>  0:22
     CLOCK: [2019-11-29 Fri 11:16]--[2019-11-29 Fri 11:25] =>  0:09
     CLOCK: [2019-11-27 Wed 23:24]--[2019-11-28 Thu 00:13] =>  0:49
     CLOCK: [2019-11-26 Tue 08:01]--[2019-11-26 Tue 08:45] =>  0:44
@@ -607,6 +608,13 @@ Notes:
 
 We are running kcov in the nightlies, but we cannot see the results in
 the coverage tool.
+
+*** Allow non-throwing casts for enums                                :story:
+
+In some cases we want to do a lexical cast of an enum but not actually
+throw if the enum is invalid; instead, we just want the enum mapped to
+invalid (if that is enabled). This should just be a case of adding a
+boolean to the cast templates.
 
 *** Create a docker image for builds                                  :story:
 
