--- a/doc/agile/v1/sprint_backlog_20.org
+++ b/doc/agile/v1/sprint_backlog_20.org
@@ -12,22 +12,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-11-29 Fri 11:25]
+#+CAPTION: Clock summary at [2019-11-29 Fri 12:40]
 | <75>                                               |         |       |       |       |
 | Headline                                           | Time    |       |       |     % |
 |----------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                       | *28:38* |       |       | 100.0 |
+| *Total time*                                       | *29:41* |       |       | 100.0 |
 |----------------------------------------------------+---------+-------+-------+-------|
-| Stories                                            | 28:38   |       |       | 100.0 |
-| Active                                             |         | 28:38 |       | 100.0 |
-| Edit release notes for previous sprint             |         |       | 11:24 |  39.8 |
-| Create a demo and presentation for previous sprint |         |       |  2:31 |   8.8 |
-| Sprint and product backlog grooming                |         |       |  2:24 |   8.4 |
-| Fix OSX build errors                               |         |       |  0:25 |   1.5 |
-| Fix broken build due to incorrect postgres library |         |       |  2:31 |   8.8 |
-| Add relational tracing support                     |         |       |  6:57 |  24.3 |
-| Add type overrides to primitives                   |         |       |  2:03 |   7.2 |
+| Stories                                            | 29:41   |       |       | 100.0 |
+| Active                                             |         | 29:41 |       | 100.0 |
+| Edit release notes for previous sprint             |         |       | 11:24 |  38.4 |
+| Create a demo and presentation for previous sprint |         |       |  2:31 |   8.5 |
+| Sprint and product backlog grooming                |         |       |  2:24 |   8.1 |
+| Fix OSX build errors                               |         |       |  0:25 |   1.4 |
+| Fix broken build due to incorrect postgres library |         |       |  2:31 |   8.5 |
+| Add relational tracing support                     |         |       |  6:57 |  23.4 |
+| Add type overrides to primitives                   |         |       |  2:25 |   8.1 |
 | Nightly code coverage is not being reported        |         |       |  0:23 |   1.3 |
+| Allow non-throwing casts for enums                 |         |       |  0:41 |   2.3 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -609,12 +610,37 @@ Notes:
 We are running kcov in the nightlies, but we cannot see the results in
 the coverage tool.
 
-*** Allow non-throwing casts for enums                                :story:
+*** POSTPONED Allow non-throwing casts for enums                      :story:
+    CLOSED: [2019-11-29 Fri 12:39]
+    :LOGBOOK:
+    CLOCK: [2019-11-29 Fri 11:49]--[2019-11-29 Fri 12:30] =>  0:41
+    :END:
 
 In some cases we want to do a lexical cast of an enum but not actually
 throw if the enum is invalid; instead, we just want the enum mapped to
 invalid (if that is enabled). This should just be a case of adding a
 boolean to the cast templates.
+
+It seems boost now supports this via =try_lexical_convert=. However,
+it seems its non-trivial to convert our use of lexical cast into this
+new approach. The problem is that we did not simply provide an
+=operator<<= for each enum, we overloaded =lexical_cast=. We did this
+because we are already using =operator<<= for the purposes of =io=,
+and that requires a JSON based output which is not suitable for
+casting. Its not clear what the right approach is here.
+
+Notes:
+
+- we could make use of manipulators; perhaps a =masd::json=
+  manipulator could be used to coerce =operator<<= to format into
+  JSON, otherwise we'd get a default string representation.
+
+- [[https://www.boost.org/doc/libs/1_71_0/boost/lexical_cast/try_lexical_convert.hpp][try_lexical_convert.hpp]]
+- [[https://www.boost.org/doc/libs/1_58_0/doc/html/boost_lexical_cast/synopsis.html#boost_lexical_cast.synopsis.try_lexical_convert][try_lexical_convert docs]]
+- [[https://stackoverflow.com/questions/2249711/how-to-use-the-boost-lexical-cast-library-for-just-for-checking-input][How to use the boost lexical_cast library for just for checking
+  input]]
+- [[http://boost.2283326.n4.nabble.com/lexical-cast-A-non-throwing-lexical-cast-Was-5-Observations-My-experience-with-the-boost-libraries-td2671153.html][A non-throwing lexical cast?]]
+- [[https://stackoverflow.com/questions/3157098/whats-the-right-approach-to-return-error-codes-in-c][Whats the right approach to return error codes in C++]]
 
 *** Create a docker image for builds                                  :story:
 
