--- a/doc/agile/v1/sprint_backlog_20.org
+++ b/doc/agile/v1/sprint_backlog_20.org
@@ -12,23 +12,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-11-29 Fri 12:40]
+#+CAPTION: Clock summary at [2019-11-29 Fri 14:54]
 | <75>                                               |         |       |       |       |
 | Headline                                           | Time    |       |       |     % |
 |----------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                       | *29:41* |       |       | 100.0 |
+| *Total time*                                       | *30:45* |       |       | 100.0 |
 |----------------------------------------------------+---------+-------+-------+-------|
-| Stories                                            | 29:41   |       |       | 100.0 |
-| Active                                             |         | 29:41 |       | 100.0 |
-| Edit release notes for previous sprint             |         |       | 11:24 |  38.4 |
-| Create a demo and presentation for previous sprint |         |       |  2:31 |   8.5 |
-| Sprint and product backlog grooming                |         |       |  2:24 |   8.1 |
+| Stories                                            | 30:45   |       |       | 100.0 |
+| Active                                             |         | 30:45 |       | 100.0 |
+| Edit release notes for previous sprint             |         |       | 11:24 |  37.1 |
+| Create a demo and presentation for previous sprint |         |       |  2:31 |   8.2 |
+| Sprint and product backlog grooming                |         |       |  2:24 |   7.8 |
 | Fix OSX build errors                               |         |       |  0:25 |   1.4 |
-| Fix broken build due to incorrect postgres library |         |       |  2:31 |   8.5 |
-| Add relational tracing support                     |         |       |  6:57 |  23.4 |
-| Add type overrides to primitives                   |         |       |  2:25 |   8.1 |
-| Nightly code coverage is not being reported        |         |       |  0:23 |   1.3 |
-| Allow non-throwing casts for enums                 |         |       |  0:41 |   2.3 |
+| Fix broken build due to incorrect postgres library |         |       |  2:31 |   8.2 |
+| Add relational tracing support                     |         |       |  6:57 |  22.6 |
+| Add type overrides to primitives                   |         |       |  3:29 |  11.3 |
+| Nightly code coverage is not being reported        |         |       |  0:23 |   1.2 |
+| Allow non-throwing casts for enums                 |         |       |  0:41 |   2.2 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -555,6 +555,8 @@ runs. The schema should be designed with this in mind.
 
 *** STARTED Add type overrides to primitives                          :story:
     :LOGBOOK:
+    CLOCK: [2019-11-29 Fri 14:14]--[2019-11-29 Fri 14:54] =>  0:40
+    CLOCK: [2019-11-29 Fri 12:31]--[2019-11-29 Fri 12:55] =>  0:24
     CLOCK: [2019-11-29 Fri 11:26]--[2019-11-29 Fri 11:48] =>  0:22
     CLOCK: [2019-11-29 Fri 11:16]--[2019-11-29 Fri 11:25] =>  0:09
     CLOCK: [2019-11-27 Wed 23:24]--[2019-11-28 Thu 00:13] =>  0:49
