--- a/doc/agile/v1/sprint_backlog_20.org
+++ b/doc/agile/v1/sprint_backlog_20.org
@@ -12,23 +12,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-11-29 Fri 14:54]
-| <75>                                               |         |       |       |       |
-| Headline                                           | Time    |       |       |     % |
-|----------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                       | *30:45* |       |       | 100.0 |
-|----------------------------------------------------+---------+-------+-------+-------|
-| Stories                                            | 30:45   |       |       | 100.0 |
-| Active                                             |         | 30:45 |       | 100.0 |
-| Edit release notes for previous sprint             |         |       | 11:24 |  37.1 |
-| Create a demo and presentation for previous sprint |         |       |  2:31 |   8.2 |
-| Sprint and product backlog grooming                |         |       |  2:24 |   7.8 |
-| Fix OSX build errors                               |         |       |  0:25 |   1.4 |
-| Fix broken build due to incorrect postgres library |         |       |  2:31 |   8.2 |
-| Add relational tracing support                     |         |       |  6:57 |  22.6 |
-| Add type overrides to primitives                   |         |       |  3:29 |  11.3 |
-| Nightly code coverage is not being reported        |         |       |  0:23 |   1.2 |
-| Allow non-throwing casts for enums                 |         |       |  0:41 |   2.2 |
+#+CAPTION: Clock summary at [2019-12-01 Sun 12:20]
+| <75>                                                 |         |       |       |       |
+| Headline                                             | Time    |       |       |     % |
+|------------------------------------------------------+---------+-------+-------+-------|
+| *Total time*                                         | *34:39* |       |       | 100.0 |
+|------------------------------------------------------+---------+-------+-------+-------|
+| Stories                                              | 34:39   |       |       | 100.0 |
+| Active                                               |         | 34:39 |       | 100.0 |
+| Edit release notes for previous sprint               |         |       | 11:24 |  32.9 |
+| Create a demo and presentation for previous sprint   |         |       |  2:31 |   7.3 |
+| Sprint and product backlog grooming                  |         |       |  2:24 |   6.9 |
+| Fix OSX build errors                                 |         |       |  0:25 |   1.2 |
+| Fix broken build due to incorrect postgres library   |         |       |  2:31 |   7.3 |
+| Fix borked nightly  due to serialisation link errors |         |       |  1:18 |   3.8 |
+| Add relational tracing support                       |         |       |  9:08 |  26.4 |
+| Add type overrides to primitives                     |         |       |  3:54 |  11.3 |
+| Nightly code coverage is not being reported          |         |       |  0:23 |   1.1 |
+| Allow non-throwing casts for enums                   |         |       |  0:41 |   2.0 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -381,8 +382,23 @@ separate story. For now we will just disable relational.
 This is because we disabled relational in CTest to fix the problems
 above (point 1). We need to enable it just for nightlies.
 
+*** COMPLETED Fix borked nightly  due to serialisation link errors    :story:
+    CLOSED: [2019-12-01 Sun 12:16]
+    :LOGBOOK:
+    CLOCK: [2019-12-01 Sun 12:17]--[2019-12-01 Sun 12:20] =>  0:03
+    CLOCK: [2019-12-01 Sun 11:01]--[2019-12-01 Sun 12:16] =>  1:15
+    :END:
+
+Seems like the nightly is borked again:
+
+: /work/DomainDrivenConsulting/masd/vcpkg/masd/installed/x64-linux/include/boost/serialization/extended_type_info_typeid.hpp:87: undefined reference to `boost::serialization::typeid_system::extended_type_info_typeid_0::extended_type_info_typeid_0(char const*)'
+
+It seems the problem is a linking error with the serialisation
+library.
+
 *** STARTED Add relational tracing support                            :story:
     :LOGBOOK:
+    CLOCK: [2019-11-30 Sat 18:02]--[2019-11-30 Sat 20:13] =>  2:11
     CLOCK: [2019-11-27 Wed 23:01]--[2019-11-27 Wed 23:19] =>  0:18
     CLOCK: [2019-11-25 Mon 08:03]--[2019-11-25 Mon 08:21] =>  0:18
     CLOCK: [2019-11-24 Sun 21:01]--[2019-11-24 Sun 22:32] =>  1:31
@@ -488,6 +504,9 @@ Notes:
   found, extract the content into a JSON field. We can use the [[https://www.boost.org/doc/libs/1_71_0/boost/log/sinks/text_ipc_message_queue_backend.hpp][IPC
   backend]] as a starting point.
 - move relational tracer and relational logger into relational model.
+- actually the right solution is to create a really simple relational
+  model with JSON content and then create stored procs to extract data
+  from JSON.
 
 Merged stories:
 
@@ -555,6 +574,7 @@ runs. The schema should be designed with this in mind.
 
 *** STARTED Add type overrides to primitives                          :story:
     :LOGBOOK:
+    CLOCK: [2019-11-30 Sat 00:02]--[2019-11-30 Sat 00:27] =>  0:25
     CLOCK: [2019-11-29 Fri 14:14]--[2019-11-29 Fri 14:54] =>  0:40
     CLOCK: [2019-11-29 Fri 12:31]--[2019-11-29 Fri 12:55] =>  0:24
     CLOCK: [2019-11-29 Fri 11:26]--[2019-11-29 Fri 11:48] =>  0:22
