--- a/doc/agile/v1/sprint_backlog_20.org
+++ b/doc/agile/v1/sprint_backlog_20.org
@@ -12,24 +12,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-12-01 Sun 12:20]
+#+CAPTION: Clock summary at [2019-12-01 Sun 13:29]
 | <75>                                                 |         |       |       |       |
 | Headline                                             | Time    |       |       |     % |
 |------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                         | *34:39* |       |       | 100.0 |
+| *Total time*                                         | *35:46* |       |       | 100.0 |
 |------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                              | 34:39   |       |       | 100.0 |
-| Active                                               |         | 34:39 |       | 100.0 |
-| Edit release notes for previous sprint               |         |       | 11:24 |  32.9 |
-| Create a demo and presentation for previous sprint   |         |       |  2:31 |   7.3 |
-| Sprint and product backlog grooming                  |         |       |  2:24 |   6.9 |
+| Stories                                              | 35:46   |       |       | 100.0 |
+| Active                                               |         | 35:46 |       | 100.0 |
+| Edit release notes for previous sprint               |         |       | 11:24 |  31.9 |
+| Create a demo and presentation for previous sprint   |         |       |  2:31 |   7.0 |
+| Sprint and product backlog grooming                  |         |       |  2:24 |   6.7 |
 | Fix OSX build errors                                 |         |       |  0:25 |   1.2 |
-| Fix broken build due to incorrect postgres library   |         |       |  2:31 |   7.3 |
-| Fix borked nightly  due to serialisation link errors |         |       |  1:18 |   3.8 |
-| Add relational tracing support                       |         |       |  9:08 |  26.4 |
-| Add type overrides to primitives                     |         |       |  3:54 |  11.3 |
+| Fix broken build due to incorrect postgres library   |         |       |  2:31 |   7.0 |
+| Fix borked nightly  due to serialisation link errors |         |       |  1:18 |   3.6 |
+| Add relational tracing support                       |         |       |  9:08 |  25.5 |
+| Add type overrides to primitives                     |         |       |  5:01 |  14.0 |
 | Nightly code coverage is not being reported          |         |       |  0:23 |   1.1 |
-| Allow non-throwing casts for enums                   |         |       |  0:41 |   2.0 |
+| Allow non-throwing casts for enums                   |         |       |  0:41 |   1.9 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -574,6 +574,8 @@ runs. The schema should be designed with this in mind.
 
 *** STARTED Add type overrides to primitives                          :story:
     :LOGBOOK:
+    CLOCK: [2019-12-01 Sun 13:15]--[2019-12-01 Sun 13:29] =>  0:14
+    CLOCK: [2019-12-01 Sun 12:21]--[2019-12-01 Sun 13:14] =>  0:53
     CLOCK: [2019-11-30 Sat 00:02]--[2019-11-30 Sat 00:27] =>  0:25
     CLOCK: [2019-11-29 Fri 14:14]--[2019-11-29 Fri 14:54] =>  0:40
     CLOCK: [2019-11-29 Fri 12:31]--[2019-11-29 Fri 12:55] =>  0:24
