--- a/doc/agile/v1/sprint_backlog_20.org
+++ b/doc/agile/v1/sprint_backlog_20.org
@@ -12,22 +12,22 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-12-01 Sun 13:29]
+#+CAPTION: Clock summary at [2019-12-01 Sun 13:53]
 | <75>                                                 |         |       |       |       |
 | Headline                                             | Time    |       |       |     % |
 |------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                         | *35:46* |       |       | 100.0 |
+| *Total time*                                         | *36:08* |       |       | 100.0 |
 |------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                              | 35:46   |       |       | 100.0 |
-| Active                                               |         | 35:46 |       | 100.0 |
-| Edit release notes for previous sprint               |         |       | 11:24 |  31.9 |
+| Stories                                              | 36:08   |       |       | 100.0 |
+| Active                                               |         | 36:08 |       | 100.0 |
+| Edit release notes for previous sprint               |         |       | 11:24 |  31.5 |
 | Create a demo and presentation for previous sprint   |         |       |  2:31 |   7.0 |
-| Sprint and product backlog grooming                  |         |       |  2:24 |   6.7 |
+| Sprint and product backlog grooming                  |         |       |  2:24 |   6.6 |
 | Fix OSX build errors                                 |         |       |  0:25 |   1.2 |
 | Fix broken build due to incorrect postgres library   |         |       |  2:31 |   7.0 |
 | Fix borked nightly  due to serialisation link errors |         |       |  1:18 |   3.6 |
-| Add relational tracing support                       |         |       |  9:08 |  25.5 |
-| Add type overrides to primitives                     |         |       |  5:01 |  14.0 |
+| Add relational tracing support                       |         |       |  9:08 |  25.3 |
+| Add type overrides to primitives                     |         |       |  5:23 |  14.9 |
 | Nightly code coverage is not being reported          |         |       |  0:23 |   1.1 |
 | Allow non-throwing casts for enums                   |         |       |  0:41 |   1.9 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
@@ -574,6 +574,7 @@ runs. The schema should be designed with this in mind.
 
 *** STARTED Add type overrides to primitives                          :story:
     :LOGBOOK:
+    CLOCK: [2019-12-01 Sun 13:30]--[2019-12-01 Sun 13:52] =>  0:22
     CLOCK: [2019-12-01 Sun 13:15]--[2019-12-01 Sun 13:29] =>  0:14
     CLOCK: [2019-12-01 Sun 12:21]--[2019-12-01 Sun 13:14] =>  0:53
     CLOCK: [2019-11-30 Sat 00:02]--[2019-11-30 Sat 00:27] =>  0:25
